// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c7kv56i soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-ggxw0v soui-radio-group"
>
  <div
    class="cx6oiet soui-radio-wrapper c-xza15a soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="cx6oiet soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="c-smsfdq soui-radio-indicator-wrapper"
    >
      <span
        class="c-cz3aa7 soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-iv35qp soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cdho0s5 soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c29ccod soui-slider-track"
    >
      <div
        class="c-vi7vmf soui-slider-track-inner"
        style="left: 0%; right: 92%;"
      >
        <div
          class="cpjwr1t soui-slider-indicator ccnm7my soui-slider-indicator-end"
        />
        <div
          class="c-g8c3ik soui-slider-end-value c2a5bo3 soui-slider-value"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c7kv56i soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="c2v0s24 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="cvrrn77 soui-button-primary c871ech soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
